# Django_application

./: Dockerfile  README.md  pyproject.toml
m09-perm/mysite/: shopapp-products-fixtures.json
m09-perm/mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
m09-perm/mysite/blogapp/migrations/: 0003_alter_article_content_alter_article_pub_date.py
m09-perm/mysite/myapiapp/: views.py
m09-perm/mysite/myauth/: models.py  tests.py
m09-perm/mysite/mysite/: urls.py
m09-perm/mysite/shopapp/: admin.py  common.py  models.py  serializers.py  tests.py
m09-perm/mysite/shopapp/fixtures/: user-fixture.json
m09-perm/mysite/shopapp/migrations/: 0008_product_created_by.py  0009_alter_product_created_by.py  0011_alter_product_created_by.py  0012_alter_product_created_by.py  0013_alter_product_created_by.py  0015_order_receipt.py  0020_alter_order_options_alter_product_options.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date_alter_author_name.py
mysite/blogapp/templates/blogapp/: article_list.html
mysite/myauth/: admin.py  forms.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py
mysite/shopapp/: forms.py  sitemap.py  urls.py  views.py
mysite/shopapp/fixtures/: product-fixture.json
mysite/shopapp/migrations/: 0010_alter_product_created_by.py  0014_alter_product_options.py  0016_product_preview1.py  0017_productimage.py  0018_alter_order_options_alter_product_options_and_more.py  0019_alter_product_name.py  0021_alter_product_description_alter_product_name.py
(+24 files in other folders)
